assets/css/style.css
body {
    font-family: 'Open Sans', sans-serif;
    font-size: 15px;
    color: #333;
    background-color: #00c3ff;
    margin: 0;
    padding: 0;
    height: 100%;
    width: 100%;
}
html {
    width: 100%;
    height: 100%;
    overflow-y: hidden;
}
/* Header */
header {
    padding: 0 1rem;
    text-align: center;
    margin: 0;
    top: 0;
    z-index: 110;
    width: 100%;
    display: flex;
    justify-content: space-around;
    align-items: baseline;
    height: 40px;
}

/* Menu */
#menu {
    font-size: 1.8rem;
    letter-spacing: 2px;
    list-style-type: none;
    text-transform: uppercase;
}

header a {
    text-decoration: none;
    color: inherit;
}

.active {
    background-color: rgba(255, 255, 255, 0.6);
    color: rgba(0, 3, 197, 0.8);
    font-weight: 700;
}

/* Nav */
nav {
    position: fixed;
    width: 100%;
    padding: 0 1rem;
    box-shadow: 0 2px 2px rgba(255, 255, 255, 0.6);
    background-color: rgba(0, 3, 197, 0.8);
    visibility: hidden;
    top: 0;
    left: 0;
    overflow-y: hidden;
    z-index: 100;
    transition: all 1s ease;
    max-height: 0;
}

/* Nav Link hover styling */
nav a:hover {
    text-shadow: 2px 2px 5px white
}

/* Nav dropdown functionality */
#nav-toggle:checked~nav {
    visibility: visible;
    max-height: 300px;
    transition: all 1s ease;
    top: 40px;
}

#nav-toggle {
    display: none;
}

.heading {
    margin-top: 0;
}
/* Main */
#main {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100%;
    margin: 0;
    padding: 0;
}

/* Hero welcome image */
#hero {
    background-image: url(../images/shithead_logo.png);
    background-size: cover;
    background-position: center;
    height: 93%;
    width: 90%;
    max-width: 600px;
    margin-left: 5%;
    margin-right: 5%;
    border: #333;
    border-style: groove;
    position: absolute;
    bottom: 1%;
    align-self: center;
}

/* Welcome button styling */
.welcome-button {
    background-color: rgba(0, 3, 197, 0.8);
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    text-decoration: none;
    font-size: 1.5rem;
    margin-top: 20px;
}

#play-button {
    position: absolute;
    top: 60%;
    left: 10px;
}

#rules-button {
    position: absolute;
    top: 60%;
    right: 10px;
}

/* Styling for rules */
#rules {
    background-color: rgba(0, 3, 197, 0.8);
    color: white;
    padding: 10px 20px;
    border-radius: 5px;
    text-decoration: none;
    margin: 10px 10px;
    max-height: 50%;
    overflow-x: scroll;
}

/* Styles for gameplay layout */
#opponents-hand, #opponents-table, #player-table, #player-hand {
    display: flex;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;
    margin-top: 5px;
    overflow-x: auto;
    overflow-y: hidden;
    padding-left: 5%;
    width: 90%;
    height: 16%;
}
#game-play {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin-top: 0;
    width: 100%;
    height: 20%;
}

#deck, #in-play {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 25%;
    height: 0;
    padding-bottom: 30%;
    background-size: 100% 100%;
    background-color: white;
    border: 1px solid black;
    border-radius: 5px;
}
#score, #loss {
    display: flex;
    justify-content: center;
    align-items: center;
    text-align: center;
    width: 20%;
    height: 40%;
    margin-top: 5px;
    margin-bottom: 5px;
    background-color: white;
    border: 1px solid black;
    border-radius: 5px;
}

/* Table card styling */
.table-card {
    display: flex;
    justify-content: center;
    align-items: center;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-position: center;
    width: 20%;
    height: 0;
    padding-bottom: 25%;
    margin-left: 5%;
    margin-right: 5%;
    background-color: white;
    border: 1px solid black;
    border-radius: 5px;
}
/* Opponenet hand card styling */
.opponents-hand-card {
    display: flex;
    justify-content: center;
    align-items: center;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-position: center;
    width: 20%;
    min-width: 15%;
    height: 0;
    padding-bottom: 25%;
    background-color: white;
    border: 1px solid black;
    border-radius: 5px;
}

/* Player hand card styling */
.player-hand-card {
    display: flex;
    justify-content: center;
    align-items: center;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    background-position: center;
    width: 20%;
    min-width: 15%;
    height: 0;
    padding-bottom: 25%;
    background-color: white;
    border: 1px solid black;
    border-radius: 5px;
}

/* Shuffle and deal button styling */
#shuffle-button, #deal-button {
    background-color: rgba(0, 3, 197, 0.8);
    color: white;
    padding: 5px 5px;
    border-radius: 5px;
    text-decoration: none;
    position: absolute;
    bottom: 7%;
}
#shuffle-button {
    left: 3%;
    bottom: 7%;
    height: 5%;
}
#deal-button {
    right: 3%;
    bottom: 7%;
    height: 5%;
}
/* Play selected card and Swap cards button styling */
#play-selected-button, #swap-selected-button {
    background-color: rgba(0, 3, 197, 0.8);
    color: white;
    padding: 5px 5px;
    border-radius: 5px;
    text-decoration: none;
    position: absolute;
    bottom: 7%;
}
#play-selected-button {
    left: 45%;
    bottom: 7%;
    height: 5%;
}
#swap-selected-button {
    right: 3%;
    bottom: 7%;
    height: 5%;
}

/* Tips styling */
#tip {
    background-color: rgba(0, 3, 197, 0.8);
    color: white;
    border-radius: 5px;
    text-decoration: none;
    position: absolute;
    align-self: center;
    margin-left: 10%;
    margin-right: 10%;
    max-height: 10%;
    height: fit-content;
    bottom: 1%;
}

#tip h4 {
    margin: 0;
    padding: 0;
    text-align: center;
}

